--- a/help_backup.html
+++ b/help_backup.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="zh">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=360,initial-scale=1,maximum-scale=1">
-    <title>关于迁移设备 - 「他」Remake</title>
-    <link rel="stylesheet" href="css/common.css">
-    <script src="js/zquery.js"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=360,initial-scale=1,maximum-scale=1">
+	<title>关于迁移设备 - 「他」Remake</title>
+	<style>
+		body {
+			background-color: #efecea;
+		}
+
+		.main {
+			max-width: 750px;
+			margin: 0 auto;
+		}
+	</style>
 
 </head>
-<body>
-    <div class="main">
 
-        
-    </div>
+<body>
+	<div class="main">
+
+
+	</div>
 </body>
+
 </html>
