--- a/update.html
+++ b/update.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="zh">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=360,initial-scale=1,maximum-scale=10">
-    <title>检查更新 - 「他」Remake</title>
-    <link rel="stylesheet" href="css/common.css">
-    <script src="js/zquery.js"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=360,initial-scale=1,maximum-scale=10">
+	<title>下载最新版本 - 「他」Remake</title>
+	<style>
+		body {
+			background-color: #efecea;
+		}
+
+		.main {
+			max-width: 750px;
+			margin: 0 auto;
+		}
+	</style>
 
 </head>
-<body>
-    <div class="main">
 
-        
-    </div>
+<body>
+	<div class="main">
+		<h1>别急，还没有做完</h1>
+
+	</div>
 </body>
+
 </html>
