--- a/help_backup.html
+++ b/help_backup.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="color-scheme" content="light">
 	<meta name="viewport" content="width=360,initial-scale=1,maximum-scale=1">
 	<title>关于迁移设备 - 「他」Remake</title>
 	<style>
