--- a/update.html
+++ b/update.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="color-scheme" content="light">
 	<meta name="viewport" content="width=360,initial-scale=1,maximum-scale=10">
 	<title>下载最新版本 - 「他」Remake</title>
 	<style>
