--- a/index.html
+++ b/index.html
@@ -138,19 +138,19 @@
 
 		@keyframes dropdownicon {
 			0%{
-				opacity: 100%;
+				opacity: 1;
 			}
 			25%{
-				opacity: 80%;
+				opacity: 0.8;
 			}
 			50%{
 				opacity: 0%;
 			}
 			75%{
-				opacity: 80%;
+				opacity: 0.8;
 			}
 			100%{
-				opacity: 100%;
+				opacity: 1;
 			}
 		}
 		.downloadbutton{
