--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<meta name="description" content="「他」APP复刻版网站" data-rh="true">
 	<meta property="og:title" content="「他」Remake - 与君初相识，犹如故人归，他APP复刻版" data-rh="true">
 	<meta property="og:description" content="「他」APP复刻版网站" data-rh="true">
+	<meta name="msvalidate.01" content="7959B1CDA97760A1223C4909F501A988" />
 	<!-- 结束SEO部分 -->
 	<!-- 现在github.io访问越来越慢了，必须把所有资源嵌入到一页内，并且保持到30KB以内… -->
 	<!-- 现在连注释也要省着点写吗? -->
