add dlc help page

--- a/index.html
+++ b/index.html
@@ -329,6 +329,9 @@
 				</td>
 			</tr>
 		</table>
+		
+		<div style="height: 32px"></div>
+		<a href="https://gitee.com/zyfdroid/him-remake"><img style="width:calc(100% - 64px);margin:32px;" src="https://gitee.com/ZYFDroid/him-remake/widgets/widget_card.svg?colors=4183c4,ffffff,ffffff,e3e9ed,666666,9b9b9b"></a>
 		<div style="height: 64px"></div>
 
 		<div class="footer">
