--- a/update.html
+++ b/update.html
@@ -387,7 +387,13 @@
 		<p class="para0">
 			<ul class="itemlist">
 				<li>添加中秋节特别内容。</li>
+				<li>
+
+					安装内容更新教程：<a href="help_dlc.html">关于「时空邮局」的说明</a>
+				</li>
 			</ul>
+		</p>
+		<p class="para0">
 		</p>
 
 		<div style="height: 32px;"></div>
