--- a/update_new.html
+++ b/update_new.html
@@ -231,7 +231,7 @@
 		var versionInfo = {
 			currentVersionName: "1.2.0.0",
 			currentVersionCode: 1020000,
-			dataPackVersion: 23110301
+			dataPackVersion: 23121001
 		};		
 	</script>
 	<!-- zquery.min.js -->
@@ -390,6 +390,9 @@
 		<p class="para0">
 			<ul class="itemlist">
 				<li>添加了少量新内容</li>
+				<li>
+					安装内容更新教程：<a href="help_dlc.html">关于「时空邮局」的说明</a>
+				</li>
 			</ul>
 		</p>
 
