--- a/update_1100.html
+++ b/update_1100.html
@@ -229,9 +229,9 @@
 <body>
 	<script>
 		var versionInfo = {
-			currentVersionName: "1.2.0.0",
-			currentVersionCode: 1020000,
-			dataPackVersion: 23121001
+			currentVersionName: "1.1.0.0",
+			currentVersionCode: 1010000,
+			dataPackVersion: 23092701
 		};		
 	</script>
 	<!-- zquery.min.js -->
@@ -377,11 +377,8 @@
 		<div class="titledesc">ver. <span class="vername">-</span></div>
 		<p class="para0">
 			<ul class="itemlist">
-				<li>新机制：「时空通信凭证」(数据导入&amp;导出)，可以在更换手机时保留数据。</li>
-				<li>新机制：「时空邮局」(DLC系统)，一个新的通道。敬请期待后续活动。</li>
-				<li>优化：主页恢复到三个按钮的样式，更多功能放在上滑菜单中。</li>
-				<li>优化：调整了大量对话界面的外观。</li>
-				<li>优化：更新了早安电话的机制。</li>
+				<li>新机制：提前接听选项，同时如果未设置早安电话时间，也可以主动接听。</li>
+				<li>优化：字体显示。</li>
 			</ul>
 		</p>
 		
@@ -389,11 +386,14 @@
 		<div class="titledesc">ver. <span class="dataver">-</span></div>
 		<p class="para0">
 			<ul class="itemlist">
-				<li>添加了少量新内容</li>
+				<li>添加中秋节特别内容。</li>
 				<li>
+
 					安装内容更新教程：<a href="help_dlc.html">关于「时空邮局」的说明</a>
 				</li>
 			</ul>
+		</p>
+		<p class="para0">
 		</p>
 
 		<div style="height: 32px;"></div>
