--- a/update.html
+++ b/update.html
@@ -229,8 +229,8 @@
 <body>
 	<script>
 		var versionInfo = {
-			currentVersionName: "1.2.0.0",
-			currentVersionCode: 1020000,
+			currentVersionName: "1.2.0.1",
+			currentVersionCode: 1020001,
 			dataPackVersion: 23121001
 		};		
 	</script>
@@ -377,6 +377,8 @@
 		<div class="titledesc">ver. <span class="vername">-</span></div>
 		<p class="para0">
 			<ul class="itemlist">
+			
+				<li>1.2.0.1：修复大量界面Bug，部分动画适配高刷屏。</li>
 				<li>新机制：「时空通信凭证」(数据导入&amp;导出)，可以在更换手机时保留数据。</li>
 				<li>新机制：「时空邮局」(DLC系统)，一个新的通道。敬请期待后续活动。</li>
 				<li>优化：主页恢复到三个按钮的样式，更多功能放在上滑菜单中。</li>
