--- a/update.html
+++ b/update.html
@@ -229,9 +229,9 @@
 <body>
 	<script>
 		var versionInfo = {
-			currentVersionName: "1.2.0.1",
-			currentVersionCode: 1020001,
-			dataPackVersion: 23121001
+			currentVersionName: "1.3.0.0",
+			currentVersionCode: 1030000,
+			dataPackVersion: 24012001
 		};		
 	</script>
 	<!-- zquery.min.js -->
@@ -378,12 +378,10 @@
 		<p class="para0">
 			<ul class="itemlist">
 			
-				<li>1.2.0.1：修复大量界面Bug，部分动画适配高刷屏。</li>
-				<li>新机制：「时空通信凭证」(数据导入&amp;导出)，可以在更换手机时保留数据。</li>
-				<li>新机制：「时空邮局」(DLC系统)，一个新的通道。敬请期待后续活动。</li>
-				<li>优化：主页恢复到三个按钮的样式，更多功能放在上滑菜单中。</li>
-				<li>优化：调整了大量对话界面的外观。</li>
-				<li>优化：更新了早安电话的机制。</li>
+				<li>1.3.0.0 夜路陪伴</li>
+				<li>新功能：</li>
+				<li>夜路陪伴：可以用于隐蔽触发夜路通话来电。入口在安全语音右上角，具体使用见APP内说明。</li>
+				<li>优化：修复了一些已知问题。</li>
 			</ul>
 		</p>
 		
@@ -391,7 +389,7 @@
 		<div class="titledesc">ver. <span class="dataver">-</span></div>
 		<p class="para0">
 			<ul class="itemlist">
-				<li>添加了少量新内容</li>
+				<li>暂无内容更新</li>
 				<li>
 					安装内容更新教程：<a href="help_dlc.html">关于「时空邮局」的说明</a>
 				</li>
