--- a/update.html
+++ b/update.html
@@ -231,7 +231,7 @@
 		var versionInfo = {
 			currentVersionName: "1.3.0.0",
 			currentVersionCode: 1030000,
-			dataPackVersion: 24012001
+			dataPackVersion: 24020801
 		};		
 	</script>
 	<!-- zquery.min.js -->
@@ -389,7 +389,7 @@
 		<div class="titledesc">ver. <span class="dataver">-</span></div>
 		<p class="para0">
 			<ul class="itemlist">
-				<li>暂无内容更新</li>
+				<li>更新了一些内容。</li>
 				<li>
 					安装内容更新教程：<a href="help_dlc.html">关于「时空邮局」的说明</a>
 				</li>
