Update download description

--- a/update.html
+++ b/update.html
@@ -364,6 +364,12 @@
 					</td>
 				</tr>
 				<tr>
+					<td>QQ群：</td>
+					<td>
+						👆群号百度网盘里有
+					</td>
+				</tr>
+				<tr>
 					<td>源代码：</td>
 					<td>
 						<a href="https://gitee.com/ZYFDroid/him-remake" target="_blank">网页链接</a>
