update dlc info

--- a/update.html
+++ b/update.html
@@ -231,7 +231,7 @@
 		var versionInfo = {
 			currentVersionName: "1.3.0.0",
 			currentVersionCode: 1030000,
-			dataPackVersion: 24020801
+			dataPackVersion: 24021201
 		};		
 	</script>
 	<!-- zquery.min.js -->
@@ -395,10 +395,12 @@
 		<div class="titledesc">ver. <span class="dataver">-</span></div>
 		<p class="para0">
 			<ul class="itemlist">
-				<li>更新了一些内容。</li>
+				<li>更新了情人节特别早安电话。</li>
+				<li>由于时空邮局需要一定时间来运输，请在2月13日23:00之前完成发送。否则可能会发生超时丢件。</li>
 				<li>
 					安装内容更新教程：<a href="help_dlc.html">关于「时空邮局」的说明</a>
 				</li>
+				<li>当前使用的技术尚有不完善的地方，会有一些瑕疵。后续会持续进行改进。</li>
 			</ul>
 		</p>
 
