--- a/update.html
+++ b/update.html
@@ -228,11 +228,14 @@
 
 <body>
 	<script>
-		var versionInfo = {
+		var versionInfo = 
+//{:BEGIN_UPDATE_INFO}
+		{
 			currentVersionName: "1.3.0.0",
 			currentVersionCode: 1030000,
 			dataPackVersion: 24021201
-		};		
+		}
+//{:END_UPDATE_INFO}	
 	</script>
 	<!-- zquery.min.js -->
 	<!-- 不管是JS还是图像还是什么的统统嵌入，减少HTTP请求数量 -->
@@ -241,7 +244,7 @@
 	</script>
 	<script>
 		var userVersion = getSearchParam();
-		// iOS没有。不用再问了
+		// iOS没有。不要再问了
 		function isAppleMobileDevice() {
   			return /iphone|ipod|ipad|macintosh/i.test(navigator.userAgent.toLowerCase());
 		}
@@ -361,6 +364,12 @@
 					<td>百度网盘：</td>
 					<td>
 						<a href="https://pan.baidu.com/s/1RKSP8GizjpHMqhk5W7kzmQ?pwd=gles" target="_blank">网页链接 (提取码: gles)</a>
+					</td>
+				</tr>
+				<tr>
+					<td>奇妙应用：</td>
+					<td>
+						<a href="https://www.magicalapk.com/appview?id=1708249294975" target="_blank">前往下载（仅安装包）</a>
 					</td>
 				</tr>
 				<tr>
