Update cc info and add visit counter

--- a/update.html
+++ b/update.html
@@ -173,6 +173,8 @@
 		.footer{
 			height: 120px;
 			font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+			color: #a1a09e;
+			background-color: #302f2f;
 			padding: 16px;
 			box-sizing: border-box;
 			text-align: center;
@@ -395,10 +397,19 @@
 				</li>
 			</ul>
 		</p>
+		
+		<div style="height: 32px;"></div>
+		<p style="text-align: center;">
+		<a style="color: #635e9d; " href="index.html">返回首页</a>
+		
+		</p>
 
 		<div style="height: 32px;"></div>
 		<div class="footer">
-			<a href="/">返回首页</a>
+		本项目中的所有的官方原创素材（文案/音频/图像/视频等），均以知识共享协议 CC-BY 4.0 开放。同人创作的内容版权归对应作者所有。
+			<br />
+			<div style="height: 8px"></div>
+			<script type="text/javascript" src="https://rf.revolvermaps.com/0/0/3.js?i=5u3bc69dtqy&amp;b=9&amp;s=0&amp;m=2&amp;cl=47b013&amp;co=000670&amp;cd=aa0000&amp;v0=60&amp;v1=60&amp;r=1" async="async"></script>
 		</div>
 	</div>
 </body>
