--- a/help_backup.html
+++ b/help_backup.html
@@ -100,7 +100,18 @@
 		<p class="para0">
 			如果你需要更换设备且需要与「他」的保留通话记录，可以按照以下步骤，保存并迁移你的「时空通信凭证」。
 		</p>
+
+		<div class="primarytitle">通过二维码迁移（推荐）</div>
+		<div class="titledesc">迁移数据</div>
+
+		<p class="para0">
+			可以打开 设置->迁移至新设备 ，然后按照界面上的迁移说明进行迁移。
+		</p>
 		
+		<p class="para0">
+			也可以使用下面的方法，通过文件进行迁移。
+		</p>
+
 		<div class="primarytitle">取出「时空通信凭证」</div>
 		<div class="titledesc">备份数据</div>
 		<p class="para0">
@@ -156,7 +167,7 @@
 			将获得的「时空通信凭证」文件，下载到新设备中的<strong>下载</strong>目录；
 		</p>
 		<p class="para0">
-			安装好「他复刻版」APP之后，进入到登录界面，在登录界面中选择「安装现有时空通信凭证」；
+			安装好「他复刻版」APP之后，进入到登录界面，在登录界面中选择「安装现有时空通信凭证」，然后选择「安装通信凭证文件」；
 		</p>
 		<div class="screenshot">
 			<svg viewBox="0 0 1537 2475" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" overflow="hidden"><g transform="translate(-2001 0)"><rect x="2001" y="0" width="1537" height="2475" fill="#EEECEA"/><text font-family="DengXian,DengXian_MSFontService,sans-serif" font-weight="700" font-size="183" transform="matrix(1 0 0 1 2654.23 635)">他</text><text font-family="DengXian,DengXian_MSFontService,sans-serif" font-weight="700" font-size="183" transform="matrix(1 0 0 1 2837.56 635)">,</text><text font-family="DengXian,DengXian_MSFontService,sans-serif" font-weight="700" font-size="92" transform="matrix(1 0 0 1 2630.22 805)">一直在</text><text fill="#7F7F7F" font-family="DengXian,DengXian_MSFontService,sans-serif" font-weight="400" font-size="55" transform="matrix(1 0 0 1 2356.89 1871)">复刻版只能选择固定的性格和声线</text><path d="M2432 2026.5C2432 1972.65 2475.65 1929 2529.5 1929L3008.5 1929C3062.35 1929 3106 1972.65 3106 2026.5L3106 2026.5C3106 2080.35 3062.35 2124 3008.5 2124L2529.5 2124C2475.65 2124 2432 2080.35 2432 2026.5Z" fill="#302F2F" fill-rule="evenodd"/><text fill="#FFFFFF" font-family="DengXian,DengXian_MSFontService,sans-serif" font-weight="400" font-size="73" transform="matrix(1 0 0 1 2586.05 2051)">创建你的他</text><text font-family="DengXian,DengXian_MSFontService,sans-serif" font-weight="700" font-size="73" transform="matrix(1 0 0 1 2440.08 2226)">安装现有的通信凭证</text><text font-family="DengXian,DengXian_MSFontService,sans-serif" font-weight="700" font-size="73" transform="matrix(1 0 0 1 3120.13 2226)">&gt;</text></g></svg>
