--- a/help_dlc.html
+++ b/help_dlc.html
@@ -221,7 +221,7 @@
 				<li>不同的手机品牌界面可能会和截图有所不同，以实际界面为准。</li>
 				<li>DLC会不定期更新，可以通过APP中的检查更新选项检查是否有更新。</li>
 				<li>如果安装出现问题，请尝试将APP更新到最新版本</li>
-				<li>如果出现 FileNotFoundException ，请尝试通过不同方式（网盘/群聊）下载，或者通过文件管理器安装，删除重下，以及重启手机等操作</li>
+				<li>如果出现 FileNotFoundException ，请尝试通过不同方式（网盘/群聊）下载，或者在时空邮局界面，使用「发送新内容」手动选择文件。</li>
 				<li>每次复刻版大版本更新均会合入之前的DLC内容。</li>
 				<li>关于DLC的制作：DLC的格式是ZIP压缩包，具体DLC制作方法可以参考现有的数据包和DLC，也可以在Gitee的Issue区提问。</li>
 			</ul>
