--- a/update.html
+++ b/update.html
@@ -233,9 +233,9 @@
 		var versionInfo = 
 //{:BEGIN_UPDATE_INFO}
 		{
-			currentVersionName: "1.3.0.0",
-			currentVersionCode: 1030000,
-			dataPackVersion: 24021201
+			currentVersionName: "1.4.0.0",
+			currentVersionCode: 1040000,
+			dataPackVersion: 24053101
 		}
 //{:END_UPDATE_INFO}	
 	</script>
@@ -362,6 +362,22 @@
 		<div class="titledesc">安卓安装包 & 内容订阅</div>
 		<p class="para0">
 			<table class="relativelink">
+				
+				<tr>
+					<td>奇妙应用：</td>
+					<td>
+						[推荐] 下载 <a href="https://magicalstory.lanzout.com/i8oyq1tkutlg">奇妙应用</a><br />
+						
+					</td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>然后搜索「近在耳边」</td>
+				</tr>
+				<tr>
+					<td>123云盘：</td>
+					<td><a href="https://www.123pan.com/s/F6Pljv-0FdQh.html">前往下载(提取码: cxX6)</a></td>
+				</tr>
 				<tr>
 					<td>百度网盘：</td>
 					<td>
@@ -369,15 +385,12 @@
 					</td>
 				</tr>
 				<tr>
-					<td>奇妙应用：</td>
-					<td>
-						<a href="https://www.magicalapk.com/appview?id=1708249294975" target="_blank">前往下载（仅安装包）</a>
-					</td>
-				</tr>
-				<tr>
 					<td>QQ群：</td>
 					<td>
-						👆群号百度网盘里有
+						他 3群 902891833<br />
+						他 4群 688286991<br />
+						安装包分享群2 927372141<br />
+						安装包分享群3 668201490<br />
 					</td>
 				</tr>
 				<tr>
@@ -395,10 +408,13 @@
 		<p class="para0">
 			<ul class="itemlist">
 			
-				<li>1.3.0.0 夜路陪伴</li>
+				<li>1.4.0.0 版本更新</li>
 				<li>新功能：</li>
-				<li>夜路陪伴：可以用于隐蔽触发夜路通话来电。入口在安全语音右上角，具体使用见APP内说明。</li>
-				<li>优化：修复了一些已知问题。</li>
+				<li>添加自动检查更新功能。</li>
+				<li>添加长按桌面快捷方式。</li>
+				<li>添加扫码迁移数据功能。</li>
+				<li>添加回忆页面，可以在这里查看接到过的特殊来电。</li>
+				<li>修复了一些已知问题。</li>
 			</ul>
 		</p>
 		
@@ -406,12 +422,11 @@
 		<div class="titledesc">ver. <span class="dataver">-</span></div>
 		<p class="para0">
 			<ul class="itemlist">
-				<li>更新了情人节特别早安电话。</li>
-				<li>由于时空邮局需要一定时间来运输，请在2月13日23:00之前完成发送。否则可能会发生超时丢件。</li>
-				<li>
+				<li>暂无更新。</li>
+				<li style="display: none">由于时空邮局需要一定时间来运输，请在2月13日23:00之前完成发送。否则可能会发生超时丢件。</li>
+				<li style="display: none">
 					安装内容更新教程：<a href="help_dlc.html">关于「时空邮局」的说明</a>
 				</li>
-				<li>当前使用的技术尚有不完善的地方，会有一些瑕疵。后续会持续进行改进。</li>
 			</ul>
 		</p>
 		
