Update MagicApk link

--- a/update.html
+++ b/update.html
@@ -366,7 +366,7 @@
 				<tr>
 					<td>奇妙应用：</td>
 					<td>
-						下载 <a href="https://magicalstory.lanzout.com/i8oyq1tkutlg">奇妙应用</a><br />
+						下载 <a href="https://magicalstory.lanzout.com/i5jJJ1y5kq2j">奇妙应用</a>（<a href="https://www.bilibili.com/video/BV1Zc411w77r">备用地址</a>）<br />
 						
 					</td>
 				</tr>
@@ -401,12 +401,9 @@
 		<div class="titledesc">ver. <span class="vername">-</span></div>
 		<p class="para0">
 			<ul class="itemlist">
-			
-				<li>1.4.0.0 版本更新</li>
-				<li>新功能：</li>
 				<li>添加自动检查更新功能。</li>
-				<li>添加长按桌面快捷方式。</li>
-				<li>添加扫码迁移数据功能。</li>
+				<li>添加长按桌面快捷方式打开晚安模式、安全语音等功能。</li>
+				<li>添加扫码迁移数据。</li>
 				<li>添加回忆页面，可以在这里查看接到过的特殊来电。</li>
 				<li>修复了一些已知问题。</li>
 			</ul>
