--- a/update.html
+++ b/update.html
@@ -379,6 +379,10 @@
 					<td><a href="https://www.123pan.com/s/F6Pljv-0FdQh.html">前往下载(提取码: cxX6)</a></td>
 				</tr>
 				<tr>
+					<td>[备用] 123云盘：</td>
+					<td><a href="https://www.123pan.cn/s/F6Pljv-0FdQh.html">前往下载(提取码: cxX6)</a></td>
+				</tr>
+				<tr>
 					<td>QQ群：<br /><br /><br /><br /></td>
 					<td>
 						他 3群 902891833<br />
